Name: housetab
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: ISC
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

Executable housetab
  hs-source-dirs: src
  main-is: Main.hs

  Extensions: DataKinds, DeriveGeneric, FlexibleContexts, OverloadedStrings, PolyKinds, RecordWildCards, TypeFamilies, TypeOperators, Arrows, FlexibleInstances, MultiParamTypeClasses, StandaloneDeriving, TemplateHaskell

  Build-depends: base                        >= 4       && < 5
               -- stable core libraries
               , text
               , bytestring
               , base64-bytestring
               , aeson
               , transformers
               , cryptohash
               , random
               , either
               , time >= 1.5

               -- applcation specific, perhaps unstable, libraries.
               , postgresql-simple           >= 0.4

               , rivet-core             >= 0.1
               , rivet-adaptor-postgresql             >= 0.1

               , opaleye                     >= 0.3.1.2
                -- opaleye deps
               , product-profunctors

               , servant                     >= 0.4
               , servant-server              >= 0.4
               , servant-docs
               -- servant deps
               , warp

               , hedis                       >= 0.6

               , QuickCheck >= 2.0 && < 3
