name:                getpass
version:             0.1.0.0
license: BSD3
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable convert
  main-is:             GetPass.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , mongoDB
                     , bson
                     , text
                     , bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010